--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">taskmaster</string>
+    <string name="my_tasks">ALL TASKS</string>
+    <string name="all_tasks">All Tasks</string>
+    <string name="add_task">Add Task</string>
+    <string name="placeholder_image">placeholder image</string>
+    <string name="my_tasks2">My Tasks</string>
 </resources>
