--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">taskmaster</string>
-    <string name="my_tasks">ALL TASKS</string>
+    <string name="my_tasks">My Tasks</string>
     <string name="all_tasks">All Tasks</string>
-    <string name="add_task">Add Task</string>
     <string name="placeholder_image">placeholder image</string>
-    <string name="my_tasks2">My Tasks</string>
+    <string name="add_task">Add Task</string>
+    <string name="task_title">Task Title</string>
+    <string name="task_description">Task Description</string>
 </resources>
