--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,7 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="settings_button">settings button</string>
+    <string name="user_settings">User Settings</string>
+    <string name="username">Username</string>
+    <string name="save">save</string>
 </resources>
